--- a/code/frontend/public/platform-config.json
+++ b/code/frontend/public/platform-config.json
@@ -1,6 +1,6 @@
 {
   "Version": "5.9.0",
-  "Title": "OpsArchDashboard",
+  "Title": "运维架构系统",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": true,
