--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -73,7 +73,7 @@ services:
       - ./code/frontend:/app
     environment:
       - NODE_ENV=development
-      - ENV NEXT_TELEMETRY_DISABLED=1
+      - NEXT_TELEMETRY_DISABLED=1
     depends_on:
       backend:
         condition: service_healthy
