--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -11,7 +11,6 @@ services:
       - ./code/backend:/app
       - ./data/backend:/data/persistent
       - ./logs/backend:/var/log/backend
-      - ./etc/resolv.conf:/etc/resolv.conf
     env_file:
       - ./code/backend/.dev.env
     depends_on:
@@ -19,6 +18,9 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    dns:
+      - 223.5.5.5
+      - 119.29.29.29
     command: >
       bash -c "cd /app && ./entrypoint.sh"
     healthcheck:
