--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -18,6 +18,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      db_ts:
+        condition: service_healthy
     dns:
       - 223.5.5.5
       - 119.29.29.29
@@ -163,3 +165,27 @@ services:
       timeout: 5s
       retries: 5
       start_period: 20s
+
+  db_ts:
+    image: influxdb:2.7
+    container_name: ops_arch_dashboard_influxdb
+    restart: always
+    ports:
+      - "8086:8086"
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=admin
+      - DOCKER_INFLUXDB_INIT_PASSWORD=Admin@123
+      - DOCKER_INFLUXDB_INIT_ORG=ops_org
+      - DOCKER_INFLUXDB_INIT_BUCKET=monitoring
+      - DOCKER_INFLUXDB_INIT_RETENTION=30d
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=influxdb_admin_token_2025
+    volumes:
+      - ./data/influxdb:/var/lib/influxdb2
+      - ./logs/influxdb:/var/log/influxdb2
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8086/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
