--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -50,6 +50,9 @@ services:
         condition: service_healthy
       backend:
         condition: service_healthy
+    dns:
+      - 223.5.5.5
+      - 119.29.29.29
     command: >
       bash -c "
         source /etc/profile &&
